--- a/breathe/breathe/Base.lproj/Main.storyboard
+++ b/breathe/breathe/Base.lproj/Main.storyboard
@@ -314,7 +314,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wB1-uE-7wn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3689.8550724637685" y="260.49107142857144"/>
+            <point key="canvasLocation" x="3729" y="260"/>
         </scene>
         <!--Item-->
         <scene sceneID="idL-z3-EMD">
@@ -333,27 +333,12 @@
             </objects>
             <point key="canvasLocation" x="3016" y="260"/>
         </scene>
-        <!--MotivationScreen-->
-        <scene sceneID="MCL-em-qhf">
-            <objects>
-                <tableViewController title="MotivationScreen" modalPresentationStyle="fullScreen" id="NQ1-QU-WAg" customClass="MotivationViewController" customModule="breathe" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="wck-19-3MQ"/>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="EKo-gl-UVd"/>
-                    <connections>
-                        <outlet property="MotivationLabel" destination="X0Q-mw-Vga" id="Mck-Wu-0Ks"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Mmp-Pd-4VO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="Mly-3z-Ruh" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="3689.8550724637685" y="-449.33035714285711"/>
-        </scene>
         <!--Motivation View Controller-->
         <scene sceneID="mVL-uc-6hD">
             <objects>
                 <viewController id="ciB-fO-s27" customClass="MotivationViewController" customModule="breathe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hxc-o4-x2R">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Daily Motivation" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LLm-x2-e7f">
@@ -396,8 +381,6 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="MotivationButton:" destination="Mly-3z-Ruh" eventType="touchUpInside" id="R1N-b0-kcd"/>
-                                    <action selector="MotivationButton:" destination="NQ1-QU-WAg" eventType="touchUpInside" id="Z6K-sF-gBs"/>
                                     <action selector="MotivationButton:" destination="ciB-fO-s27" eventType="touchUpInside" id="gJM-2U-QMY"/>
                                 </connections>
                             </button>
@@ -431,7 +414,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mKE-pn-Bgi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3728.985507246377" y="-1317.1875"/>
+            <point key="canvasLocation" x="3976.811594202899" y="-449.33035714285711"/>
         </scene>
         <!--Item-->
         <scene sceneID="yzc-iH-0Gl">
@@ -444,7 +427,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="ciB-fO-s27" kind="show" id="8dO-oC-iPr"/>
+                        <segue destination="ciB-fO-s27" kind="relationship" relationship="rootViewController" id="kIz-H9-L6z"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JBH-td-DyB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
