icon and launch screen completed

--- a/breathe/breathe/Base.lproj/Main.storyboard
+++ b/breathe/breathe/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -265,7 +265,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCellTableViewCell" rowHeight="164" id="DD0-I8-UWs" customClass="ToDoTableViewCell" customModule="breathe" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="24.5" width="414" height="164"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="164"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DD0-I8-UWs" id="gkC-7z-f7R">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="164"/>
@@ -321,16 +321,19 @@
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="Swf-6b-w4H" id="ZhN-5l-xtd"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wB1-uE-7wn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3729" y="260"/>
         </scene>
-        <!--Item-->
+        <!--Tasks-->
         <scene sceneID="idL-z3-EMD">
             <objects>
                 <navigationController id="co8-Yj-N2t" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Ve5-tk-fog"/>
+                    <tabBarItem key="tabBarItem" title="Tasks" id="Ve5-tk-fog"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Bmv-NB-g0P">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -432,11 +435,11 @@
             </objects>
             <point key="canvasLocation" x="3976.811594202899" y="-449.33035714285711"/>
         </scene>
-        <!--Item-->
+        <!--Motivation-->
         <scene sceneID="yzc-iH-0Gl">
             <objects>
                 <navigationController modalPresentationStyle="fullScreen" id="SoX-AF-QUM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="se5-gQ-1ob"/>
+                    <tabBarItem key="tabBarItem" title="Motivation" id="se5-gQ-1ob"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PEv-SU-Q0T">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
