--- a/breathe/breathe/Base.lproj/Main.storyboard
+++ b/breathe/breathe/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -240,7 +240,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="ySa-zk-O25">
             <objects>
-                <tabBarController modalPresentationStyle="fullScreen" id="sDl-1g-Omp" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="HomeTabBar" modalPresentationStyle="fullScreen" id="sDl-1g-Omp" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FSo-ca-wba">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -265,7 +265,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCellTableViewCell" rowHeight="164" id="DD0-I8-UWs" customClass="ToDoTableViewCell" customModule="breathe" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="24.5" width="414" height="164"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="164"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DD0-I8-UWs" id="gkC-7z-f7R">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="164"/>
@@ -296,7 +296,6 @@
                                 <connections>
                                     <outlet property="checkButton" destination="Rnh-fj-T06" id="87L-6A-bFN"/>
                                     <outlet property="taskDesc" destination="IqB-Tp-hbW" id="vuw-0W-rZN"/>
-                                    <outlet property="taskDescription" destination="IqB-Tp-hbW" id="Ej5-dM-MtW"/>
                                     <outlet property="taskTitle" destination="b1d-vI-pBD" id="UUM-hR-OVX"/>
                                 </connections>
                             </tableViewCell>
@@ -321,6 +320,9 @@
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tabView" destination="Swf-6b-w4H" id="jgi-I0-zIE"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wB1-uE-7wn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
